fix-overflow-list-room

--- a/src/Components/Earnings/Earnings.scss
+++ b/src/Components/Earnings/Earnings.scss
@@ -1,14 +1,31 @@
-.Song-search {
-    display: flex;
-    div {
-        padding: .5rem 0 .5rem 1rem;
-        margin: auto;
-        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.377);
-        input {
-            padding-left: .5rem;
-            border: none;
-            outline: none;
-            
+.Earning {
+    max-height: 100vh;
+    overflow-y: auto;
+    &::-webkit-scrollbar {
+        width: 6px;
     }
-}
+    &::-webkit-scrollbar-thumb {
+        heigth: 1rem;
+        background-color: #eee;
+        border-radius: 6px;
+        cursor: pointer;
+    }
+    &::-webkit-scrollbar-thumb:hover{
+        background-color: #ddd;
+    }
+    
+    .Song-search {
+        display: flex;
+        div {
+            padding: .5rem 0 .5rem 1rem;
+            margin: auto;
+            box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.377);
+            input {
+                padding-left: .5rem;
+                border: none;
+                outline: none;
+                
+                }
+        }
+    }
 }
